fix align of social icons

--- a/src/style.css
+++ b/src/style.css
@@ -253,37 +253,10 @@
   margin-bottom: 14px;
 }
 
-.socials-list {
-  display: flex;
-  justify-content: center;
-}
+.socials__icons {
+  text-align: center;
 
-.socials-list__item {
-  width: 24px;
-  height: 24px;
-  margin-right: 10px;
-}
-
-.socials-list__item:last-child {
-  margin-right: 0;
-}
-
-.socials-list__link {
-  display: inline-block;
-  height: 100%;
-  color: inherit;
-  text-decoration: none;
-  outline: none;
-  transition: color .2s ease-in;
-}
-
-.socials-list__link:hover,
-.socials-list__link:active,
-.socials-list__link:focus {
-  color: var(--ui-brand-color);
-}
-
-.socials-list__icons {
-  max-width: 100%;
-  max-height: 100%;
+  @media (min-width: 992px) {
+    text-align: right;
+  }
 }
